[gd_scene load_steps=3 format=2]

[ext_resource path="res://Escenas/Proyectiles/DisparoEnemigo.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=2]

[node name="DisparoEnemigo" type="Node2D"]
script = ExtResource( 1 )
cadencia_disparo = 1.5
velocidad_proyectil = 500
proyectil = ExtResource( 2 )

[node name="TimerEnfriamiento" type="Timer" parent="."]

[node name="PosicionDisparo" type="Position2D" parent="."]

[connection signal="timeout" from="TimerEnfriamiento" to="." method="_on_TimerEnfriamiento_timeout"]
